# NeuroWarp

./: CITATION.cff  README.md  example_series_N2pcP3s.mat
matlab/: README.md  dtw_latency_difference.m  dtw_timeseries_correlation.m  neurowarp_latency_difference.m  neurowarp_timeseries_correlation.m
matlab/replicating_paper/: DTWSimulations.m  README.md  compareMarginals.m  correlateP3andN2pc.m  plotERPs.m  runDTW.m  test_N2pcP3_correlations.m
python/: README.md  pyproject.toml  use_latency_diff.py  use_timeseries_corr.py
python/src/neurodtw/: __init__.py  latency_difference.py  timeseries_correlation.py
python/src/neurowarp/: timeseries_correlation.py
