[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neurowarp"
version = "0.0.1"
authors = [
  { name="Mahan Hosseini", email="m.hosseini@fz-juelich.de" },
]
description = "Toolbox for Dynamic Time Warping based latency differences and temporal correlations between two time series for neuroscience"
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
    "scipy>=1.11",
    "tslearn>=0.6.3",
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/mahan-hosseini/NeuroWarp/"
Issues = "https://github.com/mahan-hosseini/NeuroWarp/Issues"